minor mobile desing fix

--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
                                 alt=""
                                 class="review__item__inner__avatar"
                             />
-                            <p class="review__item__inner__name">
-                                Anne Wallace
-                            </p>
-                            <p class="review__item__inner__status">
-                                Verified Buyer
-                            </p>
+                            <div class="review__item__inner__wrapper">
+                                <p class="review__item__inner__name">
+                                    Anne Wallace
+                                </p>
+                                <p class="review__item__inner__status">
+                                    Verified Buyer
+                                </p>
+                            </div>
                         </div>
                         <p class="review__item__text">
                             "Put an order with this company and can only praise
